<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmarD">

    <TextView
        android:id="@+id/TxtConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/LetreroConfirma"
        android:textColor="@color/LetreroColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/LinerV1"
        android:layout_width="324dp"
        android:layout_height="274dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.983"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtConfirmar">

        <!--el layout marginTop es para la separacion entre los TextView-->
        <!--el layout marginleft es para la separacion izquierda del liner layout se despege del costado-->
        <TextView
            android:id="@+id/TextNombre"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Nombre" />

        <TextView
            android:id="@+id/TextFecha"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/FechaNacimiento" />

        <!--el layout marginTop es para la separacion entre los TextView-->
        <!--el layout marginleft es para la separacion izquierda del liner layout se despege del costado-->
        <TextView
            android:id="@+id/TextTel"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Telefono" />

        <TextView
            android:id="@+id/TxtEmail"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Email" />
        <!--el layout marginTop es para la separacion entre los TextView-->
        <TextView
            android:id="@+id/TxtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="15dp"
            android:hint="@string/Descripcion" />
    </LinearLayout>

    <Button
        android:id="@+id/BtnEditar"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:onClick="VentanaG"
        android:text="@string/BtnEdita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LinerV1" />

    <TextView
        android:id="@+id/TvNom"
        android:layout_width="57dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/TvNom"
        app:layout_constraintEnd_toStartOf="@+id/LinerV1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TxtConfirmar" />

    <TextView
        android:id="@+id/Tvfec"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/TvCum"
        app:layout_constraintEnd_toStartOf="@+id/LinerV1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvNom" />

    <TextView
        android:id="@+id/TvTel"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/TvTel"
        app:layout_constraintEnd_toStartOf="@+id/LinerV1"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Tvfec" />

    <TextView
        android:id="@+id/TvEma"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/TvEma"
        app:layout_constraintEnd_toStartOf="@+id/LinerV1"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvTel" />

    <TextView
        android:id="@+id/TvDesc"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/TvDesc"
        app:layout_constraintEnd_toStartOf="@+id/LinerV1"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TvEma" />


</androidx.constraintlayout.widget.ConstraintLayout>